<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:onClick="produccion"
    android:orientation="vertical"
    tools:context=".menu">


    <ImageView
        android:id="@+id/imageViewLog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"

        app:srcCompat="@drawable/log" />


    <Button
        android:id="@+id/pb_empleado"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="10"
        android:background="@drawable/edt_style"
        android:hint="@string/emple"
        android:onClick="empleados"
        android:text="@string/emple"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pb_equipo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="10"
        android:background="@drawable/btn_style"
        android:onClick="equipo"
        android:text="@string/equi"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pb_evento"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="10"
        android:background="@drawable/edt_style"
        android:onClick="evento"
        android:text="@string/eve"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pb_fiesta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="10"
        android:background="@drawable/edt_style"
        android:onClick="fiesta"
        android:text="@string/fiesta"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pb_mantenmiento"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="10"
        android:background="@drawable/edt_style"
        android:onClick="mantenimiento"
        android:text="@string/mant"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pb_produccon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="10"
        android:background="@drawable/edt_style"
        android:onClick="produccion"
        android:text="@string/produ"
        android:textColor="@color/black"
        android:textSize="20sp" />


</LinearLayout>